cockroachlabs-preview-main/docs/v23.2/ui-distributed-dashboard.mdx
---
title: "Distributed Dashboard"
old_description: "The Distributed dashboard lets you monitor important distribution layer health and performance metrics."
---

The **Distributed** dashboard lets you monitor important distribution layer health and performance metrics.

To view this dashboard, [access the DB Console](/docs/v23.2/ui-overview#db-console-access) and click **Metrics** on the left-hand navigation, and then select **Dashboard** &gt; **Distributed**.

## Dashboard navigation

Use the **Graph** menu to display metrics for your entire cluster or for a specific node.

To the right of the Graph and Dashboard menus, a time interval selector allows you to filter the view for a predefined or custom time interval. Use the navigation buttons to move to the previous, next, or current time interval. When you select a time interval, the same interval is selected in the [SQL Activity](/docs/v23.2/ui-overview#sql-activity) pages. However, if you select 10 or 30 minutes, the interval defaults to 1 hour in SQL Activity pages.

Hovering your mouse pointer over the graph title will display a tooltip with a description and the [metrics](/docs/v23.2/essential-metrics-self-hosted) used to create the graph.

When hovering on graphs, crosshair lines will appear at your mouse pointer. The series' values corresponding to the given time in the cross hairs are displayed in the legend under the graph. Hovering the mouse pointer on a given series displays the corresponding value near the mouse pointer and highlights the series line (graying out other series lines). Click anywhere within the graph to freeze the values in place. Click anywhere within the graph again to cause the values to change with your mouse movements once more.

In the legend, click on an individual series to isolate it on the graph. The other series will be hidden, while the hover will still work. Click the individual series again to make the other series visible. If there are many series, a scrollbar may appear on the right of the legend. This is to limit the size of the legend so that it does not get endlessly large, particularly on clusters with many nodes.

<Note>
All timestamps in the DB Console are shown in Coordinated Universal Time (UTC).
</Note>

The **Distributed** dashboard displays the following time series graphs:

## Batches

<Frame>
  ![DB Console batches graph](/images/common/ui/ui_batches.png)
</Frame>

The **Batches** graph displays various details about [`BatchRequest`](/docs/v23.2/architecture/distribution-layer#batchrequest) traffic in the [Distribution layer](/docs/v23.2/architecture/distribution-layer).

Hovering over the graph displays values for the following metrics:

<table><thead><tr><th>Metric</th><th>Description</th></tr></thead><tbody><tr><td>Batches</td><td>The number of <code>BatchRequests</code> made, as tracked by the <code>distsender.batches</code> metric.</td></tr><tr><td>Partial Batches</td><td>The number of partial <code>BatchRequests</code> made, as tracked by the <code>distsender.batches.partial</code> metric.</td></tr></tbody></table>

## RPCs

<Frame>
  ![DB Console RPCs graph](/images/common/ui/ui_rpcs.png)
</Frame>

The **RPCs** graph displays various details about [`RPC`](/docs/v23.2/architecture/distribution-layer#grpc) traffic in the [Distribution layer](/docs/v23.2/architecture/distribution-layer).

Hovering over the graph displays values for the following metrics:

<table><thead><tr><th>Metric</th><th>Description</th></tr></thead><tbody><tr><td>RPCs Sent</td><td>The number of RPC calls made, as tracked by the <code>distsender.rpc.sent</code> metric.</td></tr><tr><td>Local Fast-path</td><td>The number of local fast-path RPC calls made, as tracked by the <code>distsender.rpc.sent.local</code> metric.</td></tr></tbody></table>

## RPC Errors

<Frame>
  ![DB Console RPC errors graph](/images/common/ui/ui_rpc_errors.png)
</Frame>

The **RPC Errors** graph displays various details about [`RPC`](/docs/v23.2/architecture/distribution-layer#grpc) errors encountered in the [Distribution layer](/docs/v23.2/architecture/distribution-layer).

Hovering over the graph displays values for the following metrics:

<table><thead><tr><th>Metric</th><th>Description</th></tr></thead><tbody><tr><td>Replica Errors</td><td>The number of RPCs sent due to per-replica errors, as tracked by the <code>distsender.rpc.sent.nextreplicaerror</code> metric.</td></tr><tr><td>Not Leaseholder Errors</td><td>The number of <code>NotLeaseHolderErrors</code> logged, as tracked by the <code>distsender.errors.notleaseholder</code> metric.</td></tr></tbody></table>

## KV Transactions

<Frame>
  ![DB Console KV transactions graph](/images/common/ui/ui_kv_transactions.png)
</Frame>

The **KV Transactions** graph displays various details about transactions in the [Transaction layer](/docs/v23.2/architecture/transaction-layer).

Hovering over the graph displays values for the following metrics:

<table><thead><tr><th>Metric</th><th>Description</th></tr></thead><tbody><tr><td>Committed</td><td>The number of committed KV transactions (including fast-path), as tracked by the <code>txn.commits</code> metric.</td></tr><tr><td>Fast-path Committed</td><td>The number of committed one-phase KV transactions, as tracked by the <code>txn.commits1PC</code> metric.</td></tr><tr><td>Aborted</td><td>The number of aborted KV transactions, as tracked by the <code>txn.aborts</code> metric.</td></tr></tbody></table>

## KV Transaction Durations: 99th percentile

<Frame>
  ![DB Console KV transaction durations: 99th percentile graph](/images/common/ui/ui_kv_transactions_99.png)
</Frame>

The **KV Transaction Durations: 99th percentile** graph displays the 99th percentile of transaction durations over a one-minute period.

Hovering over the graph displays values for the following metrics:

<table><thead><tr><th>Metric</th><th>Description</th></tr></thead><tbody><tr><td><code>&lt;node&gt;</code></td><td>The 99th percentile of transaction durations observed over a one-minute period for that node, as calculated from the <code>txn.durations</code> metric.</td></tr></tbody></table>

## KV Transaction Durations: 90th percentile

<Frame>
  ![DB Console KV transaction durations: 90th percentile graph](/images/common/ui/ui_kv_transactions_90.png)
</Frame>

The **KV Transaction Durations: 90th percentile** graph displays the 90th percentile of transaction durations over a one-minute period.

Hovering over the graph displays values for the following metrics:

<table><thead><tr><th>Metric</th><th>Description</th></tr></thead><tbody><tr><td><code>&lt;node&gt;</code></td><td>The 90th percentile of transaction durations observed over a one-minute period for that node, as calculated from the <code>txn.durations</code> metric.</td></tr></tbody></table>

## Node Heartbeat Latency: 99th percentile

<Frame>
  ![DB Console node heartbeat latency: 99th percentile graph](/images/common/ui/ui_node_heartbeat_99.png)
</Frame>

The **Node Heartbeat Latency: 99th percentile** graph displays the 99th percentile of time elapsed between [node liveness](/docs/v23.2/cluster-setup-troubleshooting#node-liveness-issues) heartbeats on the cluster over a one-minute period.

Hovering over the graph displays values for the following metrics:

<table><thead><tr><th>Metric</th><th>Description</th></tr></thead><tbody><tr><td><code>&lt;node&gt;</code></td><td>The 99th percentile of time elapsed between <a href="/docs/v23.2/cluster-setup-troubleshooting#node-liveness-issues">node liveness</a> heartbeats on the cluster over a one-minute period for that node, as calculated from the <code>liveness.heartbeatlatency</code> metric.</td></tr></tbody></table>

## Node Heartbeat Latency: 90th percentile

<Frame>
  ![DB Console node heartbeat latency: 90th percentile graph](/images/common/ui/ui_node_heartbeat_90.png)
</Frame>

The **Node Heartbeat Latency: 90th percentile** graph displays the 90th percentile of time elapsed between [node liveness](/docs/v23.2/cluster-setup-troubleshooting#node-liveness-issues) heartbeats on the cluster over a one-minute period.

Hovering over the graph displays values for the following metrics:

<table><thead><tr><th>Metric</th><th>Description</th></tr></thead><tbody><tr><td><code>&lt;node&gt;</code></td><td>The 90th percentile of time elapsed between <a href="/docs/v23.2/cluster-setup-troubleshooting#node-liveness-issues">node liveness</a> heartbeats on the cluster over a one-minute period for that node, as calculated from the <code>liveness.heartbeatlatency</code> metric.</td></tr></tbody></table>

## Summary and events

### Summary panel

A **Summary** panel of key metrics is displayed to the right of the timeseries graphs.

<table><thead><tr><th>Metric</th><th>Description</th></tr></thead><tbody><tr><td>Total Nodes</td><td>The total number of nodes in the cluster. <a href="/docs/v23.2/node-shutdown?filters=decommission">Decommissioned nodes</a> are not included in this count.</td></tr><tr><td>Capacity Used</td><td>The storage capacity used as a percentage of <a href="/docs/v23.2/ui-cluster-overview-page#capacity-metrics">usable capacity</a> allocated across all nodes.</td></tr><tr><td>Unavailable Ranges</td><td>The number of unavailable ranges in the cluster. A non-zero number indicates an unstable cluster.</td></tr><tr><td>Queries per second</td><td>The total number of <code>SELECT</code>, <code>UPDATE</code>, <code>INSERT</code>, and <code>DELETE</code> queries executed per second across the cluster.</td></tr><tr><td>P99 Latency</td><td>The 99th percentile of service latency.</td></tr></tbody></table>

<Note>
If you are testing your deployment locally with multiple CockroachDB nodes running on a single machine (this is [not recommended in production](/docs/v23.2/recommended-production-settings#topology)), you must explicitly [set the store size](/docs/v23.2/cockroach-start#store) per node in order to display the correct capacity. Otherwise, the machine's actual disk capacity will be counted as a separate store for each node, thus inflating the computed capacity.
</Note>

### Events panel

Underneath the [Summary](#summary-panel) panel, the **Events** panel lists the 5 most recent events logged for all nodes across the cluster. To list all events, click **View all events**.

<Frame>
  ![DB Console Events](/images/v23.2/ui_events.png)
</Frame>

The following types of events are listed:

- Database created
- Database dropped
- Table created
- Table dropped
- Table altered
- Index created
- Index dropped
- View created
- View dropped
- Schema change reversed
- Schema change finished
- Node joined
- Node decommissioned
- Node restarted
- Cluster setting changed

## See also

- [Troubleshooting Overview](/docs/v23.2/troubleshooting-overview)
- [Support Resources](/docs/v23.2/support-resources)
- [Raw Status Endpoints](/docs/v23.2/monitoring-and-alerting#raw-status-endpoints)
